WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
120641
[Mac] Hyphenation respects regional format settings language instead of primary language
https://bugs.webkit.org/show_bug.cgi?id=120641
Summary
[Mac] Hyphenation respects regional format settings language instead of prima...
Alexey Proskuryakov
Reported
2013-09-03 10:54:39 PDT
Hyphenation is about language and not regional format. This makes some hyphenation tests fail for me locally because DumpRenderTree and WebKitTestRunner override AppleLanguages user default, but not AppleLocale one, and my locale language is not supported for hyphenation. See also <
rdar://problem/14897664
>.
Attachments
proposed fix
(56.80 KB, patch)
2013-09-03 10:58 PDT
,
Alexey Proskuryakov
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2013-09-03 10:58:39 PDT
Created
attachment 210389
[details]
proposed fix
mitz
Comment 2
2013-09-03 11:04:10 PDT
Comment on
attachment 210389
[details]
proposed fix View in context:
https://bugs.webkit.org/attachment.cgi?id=210389&action=review
> Source/WebCore/platform/text/cf/HyphenationCF.cpp:40 > + // Fall back to a locale created from user's default language (respecting testing overrides).
I don’t think the parenthetical is helpful.
> LayoutTests/ChangeLog:9 > + expected pixel results in mac-lion dorectory.
Typo: dorectory
Alexey Proskuryakov
Comment 3
2013-09-03 12:00:05 PDT
Committed <
http://trac.webkit.org/changeset/154995
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug