        [Mac] Hyphenation respects regional format settings language instead of primary language         https://bugs.webkit.org/show_bug.cgi?id=120641

Reviewed by Dan Bernstein.

        Fixes hyphenation tests on my machine with non-English regional format settings.

        * platform/text/cf/HyphenationCF.cpp: (createValueForNullKey):
        Use primary UI language for hyphenation, not regional settings language.



Canonical link: https://commits.webkit.org/138620@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@154995 268f45cc-cd09-0410-ab3c-d52691b4dbfc